--- a/src/pages/LoginPage/Login.scss
+++ b/src/pages/LoginPage/Login.scss
@@ -1,9 +1,6 @@
 .login_page {
     top: 0;
     left: 0;
-   
-
-
 
     &__loginBlock {
         text-align: center;
@@ -11,8 +8,25 @@
         max-width: 500px;
         width: 100%;
         background-color: #ffffff;
+        position: relative; 
+        min-height: 350px; 
     }
+
     &__divider {
         border: 0.8px solid #f0f0f0;
+    }
+
+    &__spinner {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(255, 255, 255, 0.7); 
+        border-radius: 8px;
     }
 }
