--- a/src/pages/LoginPage/Login.scss
+++ b/src/pages/LoginPage/Login.scss
@@ -1,15 +1,22 @@
 .login_page {
-    top: 0;
-    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+   
 
     &__loginBlock {
         text-align: center;
+        justify-content: center;
+       
         border-radius: 8px;
-        max-width: 500px;
-        width: 100%;
+        max-width: 600px;
+        width: 150%;
         background-color: #ffffff;
         position: relative; 
-        min-height: 350px; 
+       
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
 
     &__divider {
@@ -26,7 +33,10 @@
         justify-content: center;
         width: 100%;
         height: 100%;
-        background-color: rgba(255, 255, 255, 0.7); 
+        color: #ffffff;
+        background-color: rgb(255, 255, 255); 
         border-radius: 8px;
     }
 }
+
+
