--- a/src/pages/SignUpPage/SignUp.scss
+++ b/src/pages/SignUpPage/SignUp.scss
@@ -1,14 +1,39 @@
-// Copyright 2024 licenser.author
-// 
-// Licensed under the Apache License, Version 2.0 (the "License");
-// you may not use this file except in compliance with the License.
-// You may obtain a copy of the License at
-// 
-//     https://www.apache.org/licenses/LICENSE-2.0
-// 
-// Unless required by applicable law or agreed to in writing, software
-// distributed under the License is distributed on an "AS IS" BASIS,
-// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-// See the License for the specific language governing permissions and
-// limitations under the License.
+.login_page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+   
 
+    &__loginBlock {
+        text-align: center;
+        justify-content: center;
+       
+        border-radius: 8px;
+        max-width: 600px;
+        width: 150%;
+        background-color: #ffffff;
+        position: relative; 
+       
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    &__divider {
+        border: 0.8px solid #f0f0f0;
+    }
+
+    &__spinner {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(255, 255, 255, 0.7); 
+        border-radius: 8px;
+    }
+}
